@@ -1,8 +1,8 @@
 libc_add-ons = ports nptl $(add-ons)
 
 # build 32-bit (n32) alternative library
-# GLIBC_PASSES += mipsn32
-# DEB_ARCH_REGULAR_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
+GLIBC_PASSES += mipsn32
+DEB_ARCH_REGULAR_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
 mipsn32_add-ons = ports nptl $(add-ons)
 mipsn32_configure_target = mips32-linux
 mipsn32_CC = $(CC) -mabi=n32
@@ -13,9 +13,9 @@ mipsn32_slibdir = /lib32
 mipsn32_libdir = /usr/lib32
 mipsn32_extra_config_options := $(extra_config_options) --disable-profile
 
-# build 64-bit (64) alternative library
-# GLIBC_PASSES += mips64
-# DEB_ARCH_REGULAR_PACKAGES += libc6-mips64 libc6-dev-mips64
+# build 64-bit alternative library
+GLIBC_PASSES += mips64
+DEB_ARCH_REGULAR_PACKAGES += libc6-mips64 libc6-dev-mips64
 mips64_add-ons = ports nptl $(add-ons)
 mips64_configure_target = mips64-linux
 mips64_CC = $(CC) -mabi=64
