@@ -37,6 +37,8 @@ glibc (2.7-10) unstable; urgency=low
     architectures now support threads.
   * control/main, debhelper.in/glibc-source.install: build a glibc-source
     package.
+  * sysdeps/mips.mk, sysdeps/mipsel.mk: enable n32 and 64 flavours.  Closes:
+    #341884.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/cvs-blocked-exceptions.diff: new patch to dump
